--- a/src/app/components/galery/galery.component.html
+++ b/src/app/components/galery/galery.component.html
@@ -7,7 +7,7 @@
       <hr class="hr-presentation" />
       Bienvenidos a nuestras encantadoras cabañas, ideal para unas vacaciones
       tranquilas y relajantes en plena naturaleza.
-      <br />Nuestras cabañas está equipada con todo lo necesario para que
+      <br />Nuestras cabañas están equipadas con todo lo necesario para que
       disfrutes de una estancia cómoda y memorable, situadas en un entorno
       natural tranquilo, rodeada de bosque y playas. <br />Se puede disfrutar de
       caminatas, ciclismo, pesca, y otras actividades al aire libre. <br />A
@@ -30,12 +30,12 @@
       <ul class="list-cabin">
         <li>
           <img src="../../../assets/fav-icon.png" height="15" />
-          La cabaña puede alojar cómodamente hasta 5 personas
+          La cabaña puede alojar cómodamente hasta 4 personas.
         </li>
         <li>
           <img src="../../../assets/fav-icon.png" height="15" />
           Cuenta con un acogedor dormitorio con un somnier de 2 plazas, un
-          somnier de 1 plaza y media y smart TV
+          somnier de 1 plaza y media y smart TV.
         </li>
         <li>
           <img src="../../../assets/fav-icon.png" height="15" />
@@ -70,10 +70,10 @@
 
       <div class="row">
         <div class="col-sm">
-          <img src="../../../assets/Cabin2/cabin2-04.jpeg" alt="Card image cap"  class="img-row" />
+          <img src="../../../assets/Cabin2/cabin2-02.jpeg" alt="Card image cap"  class="img-row" />
         </div>
         <div class="col-sm">
-          <img src="../../../assets/Cabin2/cabin2-06.jpeg" alt="Card image cap" class="img-row" />
+          <img src="../../../assets/Cabin2/cabin2-03.jpeg" alt="Card image cap" class="img-row" />
         </div>
         <div class="col-sm">
           <img src="../../../assets/Cabin2/cabin2-08.jpeg" alt="Card image cap" class="img-row" />
@@ -109,10 +109,10 @@
             <img src="../../../assets/Cabin2/cabin2-06.jpeg"  alt="Image 2" class="gallery-img" />
           </mat-grid-tile>
           <mat-grid-tile>
-            <img src="../../../assets/Landscapes/landscape-10.jpg" alt="Image 3" class="gallery-img" />
+            <img src="../../../assets/Cabin2/cabin2-04.jpeg" alt="Image 3" class="gallery-img" />
           </mat-grid-tile>
           <mat-grid-tile>
-            <img src="../../../assets/Cabin2/cabin2-10.jpeg" alt="Image 4" class="gallery-img" />
+            <img src="../../../assets/Cabin2/cabin2-15.jpeg" alt="Image 4" class="gallery-img" />
           </mat-grid-tile>
           <mat-grid-tile>
             <img src="../../../assets/Cabin2/cabin2-11.jpeg" alt="Image 5" class="gallery-img" />
@@ -127,7 +127,7 @@
             <img src="../../../assets/Cabin2/cabin2-14.jpeg" alt="Image 8" class="gallery-img" />
           </mat-grid-tile>
           <mat-grid-tile>
-            <img src="../../../assets/Cabin2/cabin2-15.jpeg" alt="Image 8" class="gallery-img" />
+            <img src="../../../assets/Cabin2/photo_2024-10-21_15-01-44.jpg" alt="Image 8" class="gallery-img" />
           </mat-grid-tile>
         </mat-grid-list>
       </div>
@@ -179,7 +179,7 @@
         <li>
           <img src="../../../assets/fav-icon.png" height="15" />
           Cuenta con un acogedor dormitorio con un somnier de 2 plazas y smart
-          TV
+          TV.
         </li>
         <li>
           <img src="../../../assets/fav-icon.png" height="15" />
@@ -248,28 +248,28 @@
           <img src="../../../assets/Cabin3/cabin3-07.jpeg" alt="Image 5" class="gallery-img" />
         </mat-grid-tile>
         <mat-grid-tile>
-          <img src="../../../assets/Cabin3/cabin3-08.jpeg" alt="Image 6" class="gallery-img" />
+          <img src="../../../assets/wpp//wpp06.jpeg" alt="Image 6" class="gallery-img" />
         </mat-grid-tile>
         <mat-grid-tile>
-          <img src="../../../assets/Cabin3/cabin3-09.jpeg" alt="Image 7" class="gallery-img" />
+          <img src="../../../assets/Cabin3/cabin3-03.jpeg" alt="Image 7" class="gallery-img" />
         </mat-grid-tile>
         <mat-grid-tile>
-          <img src="../../../assets/Cabin3/cabin3-10.jpeg" alt="Image 8" class="gallery-img" />
+          <img src="../../../assets/wpp/wpp27.jpeg" alt="Image 8" class="gallery-img" />
         </mat-grid-tile>
         <mat-grid-tile>
-          <img src="../../../assets/Cabin3/cabin3-11.jpeg" alt="Image 8" class="gallery-img" />
+          <img src="../../../assets/wpp/wpp29.jpeg" alt="Image 8" class="gallery-img" />
         </mat-grid-tile>
       </mat-grid-list>
     </div>
     <div class="row">
       <div class="col-sm">
-        <img src="../../../assets/Landscapes/landscape-2.jpeg" alt="Card image cap" class="img-row" />
+        <img src="../../../assets/wpp/wpp25.jpeg" alt="Card image cap" class="img-row" />
       </div>
       <div class="col-sm">
-        <img src="../../../assets/Landscapes/landscape-5.jpg" alt="Card image cap" class="img-row" />
+        <img src="../../../assets/wpp/wpp26.jpeg" alt="Card image cap" class="img-row" />
       </div>
       <div class="col-sm">
-        <img src="../../../assets/Landscapes/landscape-6.jpeg" alt="Card image cap" class="img-row" />
+        <img src="../../../assets/wpp/wpp28.jpeg" alt="Card image cap" class="img-row" />
       </div>
     </div>
   </div>
@@ -317,7 +317,7 @@
       <ul class="list-cabin">
         <li>
           <img src="../../../assets/fav-icon.png" height="15" />
-          La cabaña puede alojar cómodamente hasta 4 personas
+          La cabaña puede alojar cómodamente hasta 4 personas.
         </li>
         <li>
           <img src="../../../assets/fav-icon.png" height="15" />
@@ -409,7 +409,7 @@
           <img src="../../../assets/Cabin4/cabin4-09.jpeg" alt="Image 7" class="gallery-img" />
         </mat-grid-tile>
         <mat-grid-tile>
-          <img src="../../../assets/Cabin4/cabin4-10.jpeg" alt="Image 8" class="gallery-img" />
+          <img src="../../../assets/wpp/wpp16.jpeg" alt="Image 8" class="gallery-img" />
         </mat-grid-tile>
         <mat-grid-tile>
           <img src="../../../assets/Cabin4/cabin4-11.jpeg" alt="Image 8" class="gallery-img" />
